test: make PaginatedComponentFile interrupt regression test actually exercise the reopen/retry path
The previous version passed even against the unpatched code: the build runs with
--add-opens java.base/java.nio.channels.spi, so doNotCloseOnInterrupt() installs a
proxy interruptor that prevents the channel from ever closing on interrupt, so the
catch/retry block under test was never reached.

Add InterruptVulnerablePaginatedComponentFile, which strips that proxy after every
open() (including the internal reopen) so NIO's default interruptor is restored,
reproducing the production condition where the channel actually closes on interrupt.
The test now fails with ClosedByInterruptException against the unpatched code and
passes with the fix.